Resize text when overflows, Fix ipad view

--- a/src/global.css
+++ b/src/global.css
@@ -78,7 +78,7 @@ main {
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1200px) {
   .container {
     width: 20vw;
   }
@@ -87,14 +87,11 @@ main {
 .screen {
   background-color: var(--tertiary-bg-color);
   width: 100%;
-  height: 20%;
+  height: 8rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  font-size: 5rem;
   padding: 1rem;
-  flex: 1;
-  overflow-x: auto;
 }
 
 .buttons-wrapper {
